# badcpplib

./: CMakeLists.txt  README.md
examples/: example.cpp
include/: badcpplib.hpp  framework.hpp  pch.hpp
include/badcpplib/: badcpplib.hpp  containers.hpp  core.hpp  debug.hpp  file_utils.hpp  functional.hpp  math_utils.hpp  memory.hpp  result.hpp  string_utils.hpp  test_framework.hpp  time_utils.hpp
scripts/: build.py  generate_docs.py  modular_build.py
src/: badcpplib.cpp  pch.cpp
src/modules/: math_utils.cpp  string_utils.cpp  test_framework.cpp
tests/: CMakeLists.txt  basic_test.cpp
tests/modules/: test_containers.cpp  test_core.cpp  test_debug.cpp  test_file_utils.cpp  test_functional.cpp  test_integration.cpp  test_math_utils.cpp  test_memory.cpp  test_result.cpp  test_string_utils.cpp  test_string_utils_backup.cpp  test_test_framework.cpp  test_time_utils.cpp
